// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex Box flex width grid 1`] = `
<div>
  <div
    class="css-p7i2td-flexBox-FlexBox"
  >
    테스트
  </div>
</div>
`;

exports[`Flex Box flex width grid 2`] = `
<div>
  <div
    class="css-ur6trp-flexBox-FlexBox"
  >
    테스트
  </div>
</div>
`;

exports[`Flex Box flex width grid 3`] = `
<div>
  <div
    class="css-p7i2td-flexBox-FlexBox"
  >
    테스트
  </div>
</div>
`;
